# trika

./: CMakeLists.txt
include/azuik/compute/: network.hpp  spelling.hpp
source/azuik/compute/: spelling.cpp
test/: main.cpp
